--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
             const [confirmDeleteId, setConfirmDeleteId] = useState(null);
             const fileInputRef = useRef(null);
 
-            // MUDANÇA: Efeito para Auto-play das fotos
+            // Efeito para Auto-play das fotos
             useEffect(() => {
                 let interval;
                 if (expandedGift && expandedGift.images?.length > 1) {
                     interval = setInterval(() => {
                         setExpandedImgIndex(prev => (prev + 1) % expandedGift.images.length);
-                    }, 3000); // Muda a foto a cada 3 segundos
+                    }, 3000); 
                 }
                 return () => clearInterval(interval);
             }, [expandedGift]);
@@ -631,14 +631,25 @@
                                 <button onClick={() => setShowPaymentModal(null)} className="absolute top-6 right-6 text-gray-300 hover:text-red-500"><Icons.X /></button>
                                 <Icons.Gift size={40} className="mx-auto text-[#556b2f] mb-4" />
                                 <h3 className="text-2xl font-bold mb-1 text-[#2f3b1c]">Oferecer Presente</h3>
-                                <p className="text-xs text-gray-400 mb-6 italic">"{showPaymentModal.name}"</p>
+                                <p className="text-xs text-gray-400 mb-2 italic">"{showPaymentModal.name}"</p>
+                                
+                                {/* MUDANÇA: Exibição do preço em destaque no modal */}
+                                <div className="mb-6 inline-block px-4 py-2 bg-[#556b2f]/10 text-[#556b2f] rounded-lg font-black text-xl border border-[#556b2f]/20">
+                                    Valor: R$ {showPaymentModal.price}
+                                </div>
+
                                 <div className="space-y-3 mb-8 text-left">
+                                    <label className="text-[10px] font-black uppercase text-gray-400 tracking-widest ml-1">Formas de Pagamento</label>
                                     <div className="p-4 bg-gray-50 rounded-2xl border text-[11px] font-mono break-all text-center">{siteConfig.pixKey || "Chave PIX não configurada"}</div>
-                                    <button onClick={() => { const el = document.createElement('textarea'); el.value = siteConfig.pixKey; document.body.appendChild(el); el.select(); document.execCommand('copy'); document.body.removeChild(el); showMsg('PIX copiado!'); }} className="w-full py-3 bg-gray-100 rounded-xl text-[10px] font-bold uppercase flex items-center justify-center gap-2"><Icons.Copy size={16}/> Copiar PIX</button>
-                                    <button onClick={handlePaymentLink} className="w-full py-3 bg-blue-50 text-blue-600 rounded-xl text-[10px] font-bold uppercase flex items-center justify-center gap-2 border border-blue-100 transition-all hover:bg-blue-100"><Icons.ExternalLink size={16}/> Link de Pagamento</button>
+                                    <button onClick={() => { const el = document.createElement('textarea'); el.value = siteConfig.pixKey; document.body.appendChild(el); el.select(); document.execCommand('copy'); document.body.removeChild(el); showMsg('PIX copiado!'); }} className="w-full py-3 bg-gray-100 rounded-xl text-[10px] font-bold uppercase flex items-center justify-center gap-2 transition-all hover:bg-gray-200"><Icons.Copy size={16}/> Copiar PIX</button>
+                                    
+                                    {/* MUDANÇA: Link de Pagamento alterado para Cartão de Crédito */}
+                                    <button onClick={handlePaymentLink} className="w-full py-3 bg-blue-50 text-blue-600 rounded-xl text-[10px] font-bold uppercase flex items-center justify-center gap-2 border border-blue-100 transition-all hover:bg-blue-100">
+                                        <Icons.ExternalLink size={16}/> Cartão de Crédito
+                                    </button>
                                 </div>
                                 <button onClick={() => handleToggleGift(showPaymentModal)} disabled={isReserving} className={`w-full py-4 rounded-2xl text-white font-black uppercase text-[10px] shadow-lg flex items-center justify-center gap-2 ${isReserving ? 'bg-gray-400' : `${THEME.primary}`}`}>
-                                    {isReserving ? <Icons.Loader2 /> : <><Icons.QrCode size={18}/> CONFIRMAR RESERVA (R$ {showPaymentModal.price})</>}
+                                    {isReserving ? <Icons.Loader2 /> : <><Icons.QrCode size={18}/> CONFIRMAR RESERVA</>}
                                 </button>
                             </div>
                         </div>
